--- a/src/Components/2_Hero/Hero.mod.scss
+++ b/src/Components/2_Hero/Hero.mod.scss
@@ -1,20 +1,28 @@
 @use '../../assets/mixins' as *;
 
 .hero-container {
-    width: 90%;
-    max-width: 1400px;
-    margin: 0 auto;
+    width: 100%;
     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 4rem;
     padding: 2rem 5%;
+
+    @include breakpoint(small) {
+        padding-top: 6rem;
+    }
+}
+
+.hero-inner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
+    max-width: 1000px;
 
     @include breakpoint(small) {
         flex-direction: column-reverse;
         gap: 2rem;
-        padding-top: 6rem;
     }
 }
 
@@ -73,8 +81,7 @@
 
 .hero-text {
     text-align: left;
-    max-width: 700px;
-    flex: 1;
+    max-width: 550px;
 
     @include breakpoint(small) {
         text-align: center;
